tests/bad/deref_non_ptr.oc
/// fail: Cannot dereference non-pointer type: u32

def main() {
    let x = 5
    let y = *x
}